--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,12 +12,18 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v1
 
+      - name: create build
+        uses: actions/setup-node@v2
+        with:
+          node-version: 18
+      - run: npm run build
+
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
-
+        
       - name: Deploy static site to S3 bucket
-        run: aws s3 sync . s3://test-abcd1998 --delete
+        run: aws s3 sync ./build s3://test-abcd1998 --delete
